fix: matter logic and optimizations
